added iconify and fixed few bugs

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.1"
   }
 }
