--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "js-base64": "^3.7.5",
     "lucide-react": "^0.271.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
