--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vaul": "^0.4.5"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1"
