--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "onelink",
-  "version": "0.1.0",
+  "name": "linknode",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,7 +34,8 @@
     "eslint-config-next": "13.4.19",
     "js-base64": "^3.7.5",
     "lucide-react": "^0.271.0",
-    "next": "13.5.1",
+    "nanoid": "^5.0.3",
+    "next": "14.0.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,7 +44,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "vaul": "^0.4.6"
+    "vaul": "^0.4.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1"
