--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "linknode",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -21,33 +23,41 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.5.20",
-    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
     "js-base64": "^3.7.5",
     "lucide-react": "^0.271.0",
     "nanoid": "^5.0.3",
     "next": "14.0.3",
-    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "^0.7.4",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "vaul": "^0.4.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@iconify/react": "^4.1.1",
+    "@types/eslint": "^8.44.7",
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "8.4.31",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
